# backend_fastapi

./: .gitignore  ResponseModel.py  database.py  main.py  model.py  pyproject.toml  thunder-collection_big_data.json
